Made program to read and dump functions and to differentiate exponent. Fix some bugs.

--- a/ResultInTex/Result.tex
+++ b/ResultInTex/Result.tex
@@ -1,16 +1,16 @@
 \documentclass{article}
 \begin{document}
 \begin{equation}
-x/(x+1.00)
+(x\cdot {2.00}+{3.00})
 \end{equation}
 \begin{equation}
-x/(x+1.00)
+(x\cdot {2.00}+{3.00})
 \end{equation}
 \begin{equation}
-(1.00*(x+1.00)-x*(1.00+0.00))/(x+1.00)^2.00
+(({1.00}\cdot {2.00}+x\cdot {0.00})+{0.00})
 \end{equation}
 \begin{equation}
-((x+1.00)-x)/(x+1.00)^2.00
+{2.00}
 \end{equation}
 
 \end{document}
