Made final (already) tex dump

--- a/ResultInTex/Result.tex
+++ b/ResultInTex/Result.tex
@@ -1,16 +1,16 @@
 \documentclass{article}
 \begin{document}
 \begin{equation}
-(x\cdot {2.00}+{3.00})
+{1.00}\cdot {(-1.00)}
 \end{equation}
 \begin{equation}
-(x\cdot {2.00}+{3.00})
+{(-1.00)}
 \end{equation}
 \begin{equation}
-(({1.00}\cdot {2.00}+x\cdot {0.00})+{0.00})
+{0.00}
 \end{equation}
 \begin{equation}
-{2.00}
+{0.00}
 \end{equation}
 
 \end{document}
