Made final (already) tex dump

--- a/ResultInTex/Result.tex
+++ b/ResultInTex/Result.tex
@@ -1,16 +1,16 @@
 \documentclass{article}
 \begin{document}
 \begin{equation}
-{1.00}\cdot {(-1.00)}
+ln(x^{2.00})
 \end{equation}
 \begin{equation}
-{(-1.00)}
+ln(x^{2.00})
 \end{equation}
 \begin{equation}
-{0.00}
+\frac{{2.00}\cdot x^({2.00}-{1.00})\cdot {1.00}}{x^{2.00}}
 \end{equation}
 \begin{equation}
-{0.00}
+\frac{{2.00}\cdot x}{x^{2.00}}
 \end{equation}
 
 \end{document}
