--- a/ResultInTex/Result.tex
+++ b/ResultInTex/Result.tex
@@ -3,19 +3,19 @@
 
 Your formula:
 \begin{equation}
-{\left( {\left( {\left( {\left( {x}+{x}\right) }-{\frac{{\frac{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}}{{\left( {{5.00}\cdot {x}}-{1.00}\right) }}}}{{\left( {{17.00}\cdot {x}}+{2.00}\right) }}}\right) }-{{{9.00}\cdot {5.00}}\cdot {0.00}}\right) }+{{{x}\cdot {0.00}}\cdot {0.00}}\right) }
+{\left( {\frac{{sin \left( {ln \left( {x}\right) }\right) }}{{{2.00}\cdot {{x}^{2.00}}}}}+{exp \left( {{{x}^{2.00}}\cdot {x}}\right) }\right) }
 \end{equation}
 Simplified formula:
 \begin{equation}
-{\left( {\left( {x}+{x}\right) }-{\frac{{\frac{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}}{{\left( {{5.00}\cdot {x}}-{1.00}\right) }}}}{{\left( {{17.00}\cdot {x}}+{2.00}\right) }}}\right) }
+{\left( {\frac{{sin \left( {ln \left( {x}\right) }\right) }}{{{2.00}\cdot {{x}^{2.00}}}}}+{exp \left( {{{x}^{2.00}}\cdot {x}}\right) }\right) }
 \end{equation}
 Derivative:
 \begin{equation}
-{\left( {\left( {1.00}+{1.00}\right) }-{\frac{{\left( {{\frac{{\left( {{\left( {{\left( {{\left( {{0.00}\cdot {x}}+{{3.00}\cdot {1.00}}\right) }\cdot {10.00}}+{{{3.00}\cdot {x}}\cdot {0.00}}\right) }\cdot {x}}+{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {1.00}}\right) }\cdot {\left( {{5.00}\cdot {x}}-{1.00}\right) }}-{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}\cdot {\left( {\left( {{0.00}\cdot {x}}+{{5.00}\cdot {1.00}}\right) }-{0.00}\right) }}\right) }}{{{\left( {{5.00}\cdot {x}}-{1.00}\right) }^{2.00}}}}\cdot {\left( {{17.00}\cdot {x}}+{2.00}\right) }}-{{\frac{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}}{{\left( {{5.00}\cdot {x}}-{1.00}\right) }}}\cdot {\left( {\left( {{0.00}\cdot {x}}+{{17.00}\cdot {1.00}}\right) }+{0.00}\right) }}\right) }}{{{\left( {{17.00}\cdot {x}}+{2.00}\right) }^{2.00}}}}\right) }
+{\left( {\frac{{\left( {{{\frac{{1.00}}{{x}}}\cdot {cos \left( {ln \left( {x}\right) }\right) }}\cdot {{2.00}\cdot {{x}^{2.00}}}}-{{sin \left( {ln \left( {x}\right) }\right) }\cdot {\left( {{0.00}\cdot {{x}^{2.00}}}+{{2.00}\cdot {{2.00}\cdot {{{x}^{\left( {2.00}-{1.00}\right) }}\cdot {1.00}}}}\right) }}\right) }}{{{{2.00}\cdot {{x}^{2.00}}}^{2.00}}}}+{{\left( {{{2.00}\cdot {{{x}^{\left( {2.00}-{1.00}\right) }}\cdot {1.00}}}\cdot {x}}+{{{x}^{2.00}}\cdot {1.00}}\right) }\cdot {exp \left( {{{x}^{2.00}}\cdot {x}}\right) }}\right) }
 \end{equation}
 Simplified derivative:
 \begin{equation}
-{\left( {2.00}-{\frac{{\left( {{\frac{{\left( {{\left( {{30.00}\cdot {x}}+{{{3.00}\cdot {x}}\cdot {10.00}}\right) }\cdot {\left( {{5.00}\cdot {x}}-{1.00}\right) }}-{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}\cdot {5.00}}\right) }}{{{\left( {{5.00}\cdot {x}}-{1.00}\right) }^{2.00}}}}\cdot {\left( {{17.00}\cdot {x}}+{2.00}\right) }}-{{\frac{{{{{3.00}\cdot {x}}\cdot {10.00}}\cdot {x}}}{{\left( {{5.00}\cdot {x}}-{1.00}\right) }}}\cdot {17.00}}\right) }}{{{\left( {{17.00}\cdot {x}}+{2.00}\right) }^{2.00}}}}\right) }
+{\left( {\frac{{\left( {{{\frac{{1.00}}{{x}}}\cdot {cos \left( {ln \left( {x}\right) }\right) }}\cdot {{2.00}\cdot {{x}^{2.00}}}}-{{sin \left( {ln \left( {x}\right) }\right) }\cdot {{2.00}\cdot {{2.00}\cdot {x}}}}\right) }}{{{{2.00}\cdot {{x}^{2.00}}}^{2.00}}}}+{{\left( {{{2.00}\cdot {x}}\cdot {x}}+{{x}^{2.00}}\right) }\cdot {exp \left( {{{x}^{2.00}}\cdot {x}}\right) }}\right) }
 \end{equation}
 
 \end{document}
