Fixed valgrind warning

--- a/ResultInTex/Result.tex
+++ b/ResultInTex/Result.tex
@@ -3,19 +3,19 @@
 
 Your formula:
 \begin{equation}
-{\left( {\frac{{sin \left( {ln \left( {x}\right) }\right) }}{{{2.00}\cdot {{x}^{2.00}}}}}+{exp \left( {{{x}^{2.00}}\cdot {x}}\right) }\right) }
+{sin \left( {x}\right) }
 \end{equation}
 Simplified formula:
 \begin{equation}
-{\left( {\frac{{sin \left( {ln \left( {x}\right) }\right) }}{{{2.00}\cdot {{x}^{2.00}}}}}+{exp \left( {{{x}^{2.00}}\cdot {x}}\right) }\right) }
+{sin \left( {x}\right) }
 \end{equation}
 Derivative:
 \begin{equation}
-{\left( {\frac{{\left( {{{\frac{{1.00}}{{x}}}\cdot {cos \left( {ln \left( {x}\right) }\right) }}\cdot {{2.00}\cdot {{x}^{2.00}}}}-{{sin \left( {ln \left( {x}\right) }\right) }\cdot {\left( {{0.00}\cdot {{x}^{2.00}}}+{{2.00}\cdot {{2.00}\cdot {{{x}^{\left( {2.00}-{1.00}\right) }}\cdot {1.00}}}}\right) }}\right) }}{{{{2.00}\cdot {{x}^{2.00}}}^{2.00}}}}+{{\left( {{{2.00}\cdot {{{x}^{\left( {2.00}-{1.00}\right) }}\cdot {1.00}}}\cdot {x}}+{{{x}^{2.00}}\cdot {1.00}}\right) }\cdot {exp \left( {{{x}^{2.00}}\cdot {x}}\right) }}\right) }
+{{1.00}\cdot {cos \left( {x}\right) }}
 \end{equation}
 Simplified derivative:
 \begin{equation}
-{\left( {\frac{{\left( {{{\frac{{1.00}}{{x}}}\cdot {cos \left( {ln \left( {x}\right) }\right) }}\cdot {{2.00}\cdot {{x}^{2.00}}}}-{{sin \left( {ln \left( {x}\right) }\right) }\cdot {{2.00}\cdot {{2.00}\cdot {x}}}}\right) }}{{{{2.00}\cdot {{x}^{2.00}}}^{2.00}}}}+{{\left( {{{2.00}\cdot {x}}\cdot {x}}+{{x}^{2.00}}\right) }\cdot {exp \left( {{{x}^{2.00}}\cdot {x}}\right) }}\right) }
+{cos \left( {x}\right) }
 \end{equation}
 
 \end{document}
